--- a/package.json
+++ b/package.json
@@ -1,20 +1,16 @@
 {
-  "name": "discordbot",
+  "name": "discord-ash-bot",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
-    "dev": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "KYEONGMIN CHO <ggingmin@gmail.com>",
+  "author": "",
   "license": "ISC",
   "dependencies": {
-    "discord.js": "^13.8.1",
-    "dotenv": "^16.0.1"
-  },
-  "devDependencies": {
-    "nodemon": "^2.0.19"
+    "discord.js": "^13.4.0",
+    "fs": "^0.0.1-security",
+    "mongoose": "^6.7.5"
   }
 }
